# Character-Neural-Engine

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  dockerdeploy.sh  pyproject.toml  requirements.txt  response.json  test.db
diagrams/: CC-BY-SA-4.0.txt  backendfrontend.drawio  cne-contextengine.drawio  design.drawio  infrastructure.drawio  questsolve_diagram.drawio  reference_architecture.drawio
lib/: cpuserver  cudaserver  main
run/: mount.sh  poetryserve.sh  venvserve.sh
scripts/: basic_test.sh  basictestscript.sh  inference_server.sh  mount.sh  perf_test.sh  prod_test.sh  serve.sh  test.sh  testscript.sh
src/sxcne/: characters.json  main.py  utilities.py
src/sxcne/models/: formatting.py  inputs.py
src/sxcne/processors/: cache.py  character.py  characters.json  database.py  databaseprocessor.py  messagedbprocessor.py  prompt.py  promptprocessor.py  server.py  serverprocessor.py  vectorprocessor.py
src/sxcne/processors/openai/: processor.py  prompt.py
src/sxcne/tests/: test_askMinato.py
tests/: test_ask.py  test_cache.py  test_database.py  test_processors.py  test_simplifier.py
